[gd_scene load_steps=8 format=3 uid="uid://bftfnuj4mri6h"]

[ext_resource type="Script" uid="uid://dftrx4q78fbw7" path="res://Scripts/partie.gd" id="1_m1snf"]
[ext_resource type="Texture2D" uid="uid://cbp2l4pnc5wl5" path="res://Assets/jouer.png" id="3_1x1o5"]
[ext_resource type="Texture2D" uid="uid://cxt4m38yrulu8" path="res://Assets/jouer.svg" id="3_up2em"]
[ext_resource type="Script" uid="uid://dxjbmkokb6h8y" path="res://Scripts/Pile.gd" id="4_1x1o5"]
[ext_resource type="PackedScene" uid="uid://dk71nt6nh05bb" path="res://Scenes/annonces.tscn" id="5_ek6vc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bjfpd"]
size = Vector2(437, 27)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ek6vc"]
size = Vector2(682, 28)

[node name="Partie" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_m1snf")

[node name="Tapis" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 201.0
offset_top = 207.0
offset_right = 865.0
offset_bottom = 420.0
mouse_filter = 2
color = Color(0.428547, 0.6671001, 0.0071176123, 1)
script = ExtResource("4_1x1o5")
Type = 1

[node name="Piles" type="Control" parent="."]
z_index = 1
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="JoueurGagnees" type="ColorRect" parent="Piles"]
visible = false
layout_mode = 0
offset_left = 22.0
offset_top = 451.0
offset_right = 165.0
offset_bottom = 640.0
script = ExtResource("4_1x1o5")

[node name="OrdiGagnees" type="ColorRect" parent="Piles"]
visible = false
layout_mode = 0
offset_left = 24.0
offset_top = 2.0
offset_right = 148.0
offset_bottom = 172.0
script = ExtResource("4_1x1o5")

[node name="MainOrdi" type="ColorRect" parent="Piles"]
visible = false
layout_mode = 0
offset_left = 195.0
offset_right = 867.0
offset_bottom = 183.0
mouse_filter = 2
script = ExtResource("4_1x1o5")
Type = 1

[node name="MainJoueur" type="ColorRect" parent="Piles"]
visible = false
layout_mode = 0
offset_left = 196.0
offset_top = 452.0
offset_right = 871.0
offset_bottom = 636.0
mouse_filter = 2
script = ExtResource("4_1x1o5")
Type = 1
card_size = Vector2(120, 180)
z_order = 40

[node name="Retourne" type="ColorRect" parent="Piles"]
visible = false
layout_mode = 0
offset_left = 883.0
offset_top = 210.0
offset_right = 1002.0
offset_bottom = 399.0
mouse_filter = 2
script = ExtResource("4_1x1o5")

[node name="Pioche" type="ColorRect" parent="Piles"]
visible = false
layout_mode = 0
offset_left = 1018.0
offset_top = 209.0
offset_right = 1138.0
offset_bottom = 399.0
script = ExtResource("4_1x1o5")
card_size = Vector2(120, 180)

[node name="Jouer" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 67.0
offset_top = 285.0
offset_right = 149.0
offset_bottom = 315.0
texture_normal = ExtResource("3_1x1o5")
texture_pressed = ExtResource("3_up2em")

[node name="ZoneJeu" type="Area2D" parent="."]
position = Vector2(195, 135)

[node name="CollisionShape2D" type="CollisionShape2D" parent="ZoneJeu"]
position = Vector2(332, 177)
shape = SubResource("RectangleShape2D_bjfpd")

[node name="MainJoueur" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainJoueur"]
position = Vector2(499, 539)
shape = SubResource("RectangleShape2D_ek6vc")

[node name="AnnoncesOrdi" parent="." instance=ExtResource("5_ek6vc")]
position = Vector2(861, 15)

[node name="AnnoncesJoueur" parent="." instance=ExtResource("5_ek6vc")]
position = Vector2(866, 442)

[node name="Scores" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Perdu" type="Label" parent="Scores"]
visible = false
layout_mode = 0
offset_left = 281.0
offset_top = 205.0
offset_right = 806.0
offset_bottom = 288.0
theme_override_colors/font_color = Color(0.56078434, 0, 0, 1)
theme_override_font_sizes/font_size = 60
text = "Vous avez perdu..."

[node name="Points" type="Label" parent="Scores"]
visible = false
layout_mode = 0
offset_left = 477.0
offset_top = 291.0
offset_right = 581.0
offset_bottom = 346.0
theme_override_font_sizes/font_size = 40
text = "50-70"

[node name="Gagne" type="Label" parent="Scores"]
visible = false
layout_mode = 0
offset_left = 277.0
offset_top = 204.0
offset_right = 786.0
offset_bottom = 287.0
theme_override_colors/font_color = Color(0, 0.33333334, 0.8627451, 1)
theme_override_font_sizes/font_size = 60
text = "Vous avez gagn√© !"

[node name="DixDeDer" type="Label" parent="Scores"]
visible = false
layout_mode = 0
offset_left = 436.0
offset_top = 363.0
offset_right = 659.0
offset_bottom = 418.0
theme_override_font_sizes/font_size = 40
text = "10 de der !!!"

[connection signal="pressed" from="Jouer" to="." method="_on_texture_button_pressed"]
[connection signal="area_shape_entered" from="ZoneJeu" to="ZoneJeu" method="_on_area_shape_entered"]
[connection signal="area_shape_exited" from="ZoneJeu" to="ZoneJeu" method="_on_area_shape_exited"]
